// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Avatar with long text names 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoAvatar-root PicassoAvatar-xsmall"
    >
      <div
        class="PicassoAvatar-textContainer PicassoAvatar-square PicassoAvatar-xsmall PicassoAvatar-clippedCorner"
      />
      <p
        class="MuiTypography-root PicassoTypography-bodyInherit PicassoTypography-invert PicassoAvatar-text PicassoAvatar-textCapLimit MuiTypography-body1"
      >
        JRB
      </p>
    </div>
  </div>
</div>
`;

exports[`Avatar avatar with photo render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoAvatar-root PicassoAvatar-xsmall"
    >
      <img
        alt="Photo alt text"
        class="PicassoImage-root PicassoAvatar-image PicassoAvatar-square PicassoAvatar-xsmall PicassoAvatar-clippedCorner"
        src="http://example.png"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar avatar with text render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoAvatar-root PicassoAvatar-xsmall"
    >
      <div
        class="PicassoAvatar-textContainer PicassoAvatar-square PicassoAvatar-xsmall PicassoAvatar-clippedCorner"
      />
      <p
        class="MuiTypography-root PicassoTypography-bodyInherit PicassoTypography-invert PicassoAvatar-text MuiTypography-body1"
      >
        JR
      </p>
    </div>
  </div>
</div>
`;
